# KnoYoo

./: .gitattributes  .gitignore  BLUEPRINT.md  Kno Yoo V2 开发节奏计划（20周）.docx  KnoYoo PRD V2.docx  PLAN_DOCUMENTS.md  README.md  ROADMAP.md  VALIDATION_CHECKLIST.md  package.json  pnpm-lock.yaml  ~$o Yoo V2 开发节奏计划（20周）.docx  开发备忘录.txt  开发日志.txt  知遇（KnoYoo）商业计划书.docx
.claude/: settings.local.json
.github/workflows/: lint.yml  release.yml
apps/browser-extension/: manifest.json  package.json  popup.html  tsconfig.json  vite.config.content.ts  vite.config.ts
apps/browser-extension/public/icons/: generate-icons.md
apps/browser-extension/src/background/: index.ts
apps/browser-extension/src/content/: index.ts  subtitles.ts
apps/browser-extension/src/popup/: index.html  popup.css  popup.ts
apps/browser-extension/src/utils/: api.ts
apps/cloud/: README.md
apps/cloud/supabase/functions/ai-proxy/: index.ts
apps/cloud/supabase/functions/license-check/: index.ts
apps/cloud/supabase/migrations/: 001_initial_schema.sql
apps/desktop/: .gitignore  README.md  eslint.config.js  index.html  package.json  run-dev.ps1  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.css  App.tsx  MindMapPage.tsx  QuickSearchApp.tsx  constants.test.ts  constants.ts  lazyPages.ts  main.tsx  router.tsx  types.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  ai_client.rs  asr_client.rs  audio.rs  audio_split.rs  bilibili.rs  books.rs  clip_server.rs  clips.rs  coach.rs  collections.rs  db.rs  doc_extract.rs  documents.rs  error.rs  export.rs  growth.rs  html_extract.rs  import.rs  lib.rs  main.rs  media.rs  milestones.rs  models.rs  notes.rs  onboarding.rs  plan.rs  search.rs  secrets.rs  shortcut.rs  transcribe.rs  tree.rs  youtube.rs  ytdlp.rs
apps/desktop/src/components/AI/: AISettingsPanel.tsx  ChatDrawer.tsx  OllamaBanner.tsx
apps/desktop/src/components/Books/: BookCover.tsx  BookDetailDrawer.tsx  BookDropOverlay.tsx  BookShelf.tsx  BookTile.tsx
apps/desktop/src/components/Clips/: ClipCard.tsx  ClipDetail.tsx  EmptyState.tsx  HighlightText.tsx  TranscribeProgress.tsx  VideoImportDialog.tsx
apps/desktop/src/components/Collections/: AddToCollectionDialog.tsx
apps/desktop/src/components/Dashboard/: WeeklyReportCard.tsx
apps/desktop/src/components/Growth/: CareerGoalCard.tsx  CoachReport.tsx  ContributionsCard.tsx  DailyTip.tsx  ExportSection.tsx  RadarPanel.tsx  ShareCard.tsx  SkillAnalytics.tsx  SkillGapAnalysis.tsx  StreakCard.tsx  WeekReport.tsx
apps/desktop/src/components/Import/: BookmarkImportDialog.tsx
apps/desktop/src/components/Layout/: AppShell.tsx  KnoYooLogo.tsx  NavSidebar.tsx  NoteSidebar.tsx  Sidebar.tsx  TopBar.tsx
apps/desktop/src/components/Milestones/: AchievementsSection.tsx  MilestoneBanner.tsx
apps/desktop/src/components/MindMap/: MindMapCanvas.tsx  MindMapToolbar.tsx  NodePreviewTooltip.tsx  SavedTreesPanel.tsx  ZoomControls.tsx
apps/desktop/src/components/Note/: FileUploadButton.tsx  NoteDetail.tsx  NoteForm.tsx  NoteListItem.tsx
apps/desktop/src/components/Onboarding/: OnboardingFlow.tsx
apps/desktop/src/components/Plan/: CalendarView.tsx  DayPopover.tsx  PlanGroupHeader.tsx  PlanPanel.tsx  TaskForm.tsx  TaskRow.tsx
apps/desktop/src/components/Settings/: ApiConfigPanel.tsx  ResetApiKeysCard.tsx  ShortcutSettings.tsx  ThemePicker.tsx  providerCatalog.ts
apps/desktop/src/components/Trash/: BooksTrashPanel.tsx  ClipsTrashPanel.tsx  DocumentsTrashPanel.tsx  MediaTrashPanel.tsx
apps/desktop/src/components/common/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  ProductTour.tsx  Toast.tsx  toast-context.ts
apps/desktop/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Combobox.tsx  Dialog.tsx  FilterChip.tsx  Input.tsx  SegmentedControl.tsx  Skeleton.tsx  Textarea.tsx  Tooltip.tsx
apps/desktop/src/hooks/: useAIConfig.ts  useAsrConfig.ts  useBooks.ts  useExport.ts  useNotes.ts  useQuickSearchNavigation.ts  useSearchHistory.ts  useTauriInvoke.ts  useTheme.ts  useTranscribeProgress.ts
apps/desktop/src/pages/: AchievementsPage.tsx  BooksPage.tsx  ClipsPage.tsx  CollectionDetailPage.tsx  CollectionsPage.tsx  DiscoverPage.tsx  DocumentsPage.tsx  GrowthPage.tsx  HomePage.tsx  MediaPage.tsx  OnboardingPage.tsx  SettingsPage.tsx  TemplateGalleryPage.tsx  TrashPage.tsx
apps/desktop/src/services/: aiService.ts  coachService.ts  index.ts  noteService.ts  planService.ts  treeService.ts
apps/desktop/src/styles/: canvas.css  index.css
apps/desktop/src/types/: speech.d.ts
apps/desktop/src/utils/: treeUtils.test.ts  treeUtils.ts  url.ts
docs/: VIDEO_TRANSCRIPTION.md
scripts/: fetch-sidecars.ps1  fetch-sidecars.sh
已废弃的旧文件/: Kno Yoo V2 开发节奏计划（20周）.docx
项目开发计划/: Kno Yoo V2 开发节奏计划（更新版）.docx  KnoYoo PRD V2.docx  开发备忘录.txt  开发日志.txt  知遇（KnoYoo）商业计划书.docx
